test/scc/expr/semantic-errors/105.t
void foo(int a, int b)
{
    
}

void test()
{
    foo(10);
}